@@ -2739,6 +2739,18 @@ if (!SP.trim) {
 	};
 }
 
+// Remove the trailing slash
+SP.tslash = function() {
+	var t = this;
+
+	for (var i = t.length - 1; i > 0; i--) {
+		if (t[i] !== '/' || i === 1)
+			return t.substring(0, i + 1);
+	}
+
+	return t;
+};
+
 SP.parseHTML = function(trim) {
 	return require('./htmlparser').parseHTML(this, trim);
 };
